--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,17 @@
 .App {
-    h1 {
+    height: 100vh;
+    width: 100%;
+
+    & h1 {
         text-align: center;
     }
-}
+    & .container {
+        margin: 200px 0 100px 0;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        gap: 3rem;
+    }
 
-.container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 2rem;
-    justify-content: center;
 }
