--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -2,12 +2,12 @@
     position: absolute;
     bottom: 0;
     left: 0;
-    right: 0;
+    width: 100%;
     background-color: var(--main-color);
     color: #ffffff;
     text-align: center;
     & p {
         font-weight: bold;
-        
+        padding: 20px 0px;
     }
 }
