--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,8 +1,17 @@
 .Header {
+    width: 100%;
+    height: 160px;
+    position: relative;
+    top: 0;
+    right: 0;
+    z-index: 1000;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 40px 10%;
+    background: transparent;
+    padding: 22px 15%;
+
+    box-shadow: 1px 1px 10px red;
     
     & img {
         width: 100px;
