--- a/src/views/AutoView.css
+++ b/src/views/AutoView.css
@@ -1,13 +1,13 @@
 .AutoView {
-    text-align: center;
-    max-width: 80%;
-    margin: auto;
-    
-    .velocidad {
-        font-weight: bold;
-    }
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    margin-top: 50px;
 
     & img {
-        width: 100%;
+        margin: 20px 0;
+        width: 80%;
     }
 }
